--- a/sass/modules/post-card/_post-card.scss
+++ b/sass/modules/post-card/_post-card.scss
@@ -270,6 +270,10 @@
     @include sm{
       flex-direction: column;
     }
+    .post-cat-list{
+      display: inline-block;
+      margin-left: 12px;
+    }
   }
   // Social Share
   .social-share {
